[package]
name = "vesta-macro"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
proc-macro-crate = "1.0"
quote = "1.0"