[package]
name = "vesta-macro"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
vesta-syntax = { version = "0.1", path = "../vesta-syntax" }
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
vesta = { version = "0.1", path = "../vesta" }