[package]
name = "vesta-macro"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
license = "MIT"
description = "Procedural macros used by and exported from the Vesta crate"
repository = "https://github.com/boltlabs-inc/vesta"
homepage = "https://github.com/boltlabs-inc/vesta"
keywords = ["pattern", "match", "case", "matching", "macro"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
vesta-syntax = { version = "0.1", path = "../vesta-syntax" }
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
vesta = { version = "0.1", path = "../vesta" }