[package]
name = "vesta"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vesta-macro = { version = "0.1", path = "../vesta-macro" }