[package]
name = "vesta"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "Extensible pattern matching"
repository = "https://github.com/boltlabs-inc/vesta"
homepage = "https://github.com/boltlabs-inc/vesta"
keywords = ["pattern", "match", "case", "matching", "macro"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vesta-macro = { version = "^0.1.1", path = "../vesta-macro" }